<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot10_nav</name>
  <version>0.0.0</version>
  <description>The mobile_robot10_nav package</description>

  <author email="vaclavekjan1@gmail.com">Jan Vaclavek</author>
  <maintainer email="vaclavekjan1@gmail.com">Jan Vaclavek</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>


  <test_depend>roslaunch</test_depend>

 <export>
  </export>
</package>
