<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot10_planner</name>
  <version>0.0.0</version>
  <description>The mobile_robot10_planner package</description>

  <maintainer email="vaclavekjan1@gmail.com">Jan Vaclavek</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>urdf</depend>

  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>
</package>
